--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_CONN_STRING=mongodb+srv://brunofelipi13:xVbC4spdSbhpBUil@cluster0.ectzaae.mongodb.net/sample_airbnb?retryWrites=true&w=majority
+MONGODB_CONN_STRING=mongodb+srv://brunofelipi13:xVbC4spdSbhpBUil@cluster0.ectzaae.mongodb.net/sample_airbnb.listingsAndReviews?retryWrites=true&w=majority
